--- a/.gitmodules
+++ b/.gitmodules
@@ -33,8 +33,8 @@
 	url = https://github.com/rust-lang/edition-guide.git
 [submodule "src/llvm-project"]
 	path = src/llvm-project
-	url = https://github.com/rust-lang/llvm-project.git
-	branch = rustc/13.0-2021-09-30
+	url = https://github.com/dcsommer/llvm-project.git
+	branch = rustc-1.44.1-backports
 [submodule "src/doc/embedded-book"]
 	path = src/doc/embedded-book
 	url = https://github.com/rust-embedded/book.git
